[project]
name = "energista"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiomqtt>=2.3.0",
    "autograd>=1.7.0",
    "pydantic>=2.10.4",
    "pydantic-yaml>=1.4.0",
    "python-dotenv>=1.0.1",
    "rich>=13.9.4",
    "websockets>=14.1",
]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]
